# bevy_libgdx_atlas

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
assets/: animation_sheet.libgdx.atlas
examples/: animation.rs
src/: assetformat.rs  error.rs  lib.rs  loader.rs
