[package]
name = "bevy_libgdx_atlas"
version = "0.3.1"
edition = "2021"
authors = ["Rustunit <mail@rustunit.com>"]
description = "Support loading `libgdx.atlas` files (used for sprite sheets and such) as Bevy assets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustunit/bevy_libgdx_atlas"
readme = "README.md"
keywords = ["bevy", "gamedev", "asset"]
categories = ["game-development"]

[lints]
workspace = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_sprite",
    "png",
] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1"
bevy = "0.15"
